set up the main file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "random-choice",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon app.js --watch routes --exec babel-node",
     "test": "echo \"Error: no test specified\" && exit 1"
