--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "random-choice",
   "version": "0.0.1",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "nodemon app.js --watch routes --exec babel-node",
+    "build": "babel src -s -D -d dist",
+    "start": "NODE_ENV=production node ./dist/app.js",
+    "dev": "nodemon ./src/app.js --watch routes --exec babel-node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "MIT",
