add babel to dependencies

--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
-  },
-  "devDependencies": {
+    "express": "^4.16.4",
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
+  },
+  "devDependencies": {
     "nodemon": "^1.18.4"
   }
 }
